# gitlab-mcp

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_TEST_RESULTS.md  LICENSE  MANIFEST.in  MCP_BUG_REPORT.md  MCP_COMPREHENSIVE_BUG_REPORT.md  README.md  SECURITY.md  complete_test_results.json  mcp_test_results.json  mcp_test_results_all_79.json  next_session_plan.md  pyproject.toml  pytest.ini  remaining_tools_test_results.json  renovate.json  test_all_79_tools.py  test_all_79_tools_complete.py  test_all_mcp_tools.py  test_remaining_tools.py  test_write_operations.py  write_operations_test_results.json
.claude/skills/: gitlab-mcp.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: CE_COMPATIBILITY_AUDIT.md  gitlab-mcp-server-prd.md
docs/api/: tools_reference.md
docs/architecture/: interfaces.md  system_overview.md
docs/phases/: phase_1_foundation.md  phase_2_repository_issues.md
docs/session_management/: README.md  session_index.md
docs/session_management/sessions/: session_001_2025-10-22.md  session_002_2025-10-22.md  session_003_2025-10-23.md  session_004.md  session_005.md  session_006.md  session_007.md  session_008.md  session_009.md  session_010.md  session_011.md  session_012.md  session_013.md  session_014.md  session_015.md  session_016.md  session_017.md  session_018.md  session_019.md  session_020.md  session_021.md  session_022.md  session_023.md  session_024.md  session_025.md  session_027.md  session_028.md  session_029.md  session_030.md  session_032.md  session_033.md  session_034.md  session_035.md  session_036.md  session_037.md
docs/session_management/templates/: session_template.md
docs/user/: configuration.md  contextforge.md  installation.md  troubleshooting.md  usage_examples.md
src/gitlab_mcp/: __init__.py  server.py
src/gitlab_mcp/client/: __init__.py  exceptions.py  gitlab_client.py
src/gitlab_mcp/config/: __init__.py  settings.py
src/gitlab_mcp/elicitation/: __init__.py  registry.py
src/gitlab_mcp/progress/: __init__.py  tracker.py
src/gitlab_mcp/prompts/: __init__.py  registry.py
src/gitlab_mcp/resources/: __init__.py  handlers.py  registry.py
src/gitlab_mcp/tasks/: __init__.py  task_manager.py
src/gitlab_mcp/tools/: __init__.py  context.py  groups.py  issues.py  labels.py  merge_requests.py  meta.py  pipelines.py  projects.py  releases.py  repositories.py  snippets.py  users.py  wikis.py
src/gitlab_mcp/utils/: __init__.py  logging.py
tests/e2e/mcp_server_e2e/: __init__.py  test_server_lifecycle.py  test_tool_invocation.py
tests/integration/: conftest.py
tests/integration/test_gitlab_api/: test_issues.py  test_repositories.py
tests/unit/test_client/: __init__.py  test_exceptions.py  test_gitlab_client.py
tests/unit/test_config/: __init__.py  test_settings.py
tests/unit/test_elicitation/: __init__.py  test_elicitation.py
tests/unit/test_progress/: __init__.py  test_progress.py
tests/unit/test_prompts/: __init__.py  test_workflows.py
tests/unit/test_resources/: __init__.py  test_handlers.py  test_registry.py
tests/unit/test_server/: test_icons.py  test_mcp_server.py  test_server_entry_points.py  test_structured_output.py  test_tool_annotations.py
tests/unit/test_tasks/: __init__.py  test_task_manager.py
tests/unit/test_tools/: __init__.py  test_context.py  test_groups.py  test_issues.py  test_labels.py  test_merge_requests.py  test_pipelines.py  test_projects.py  test_releases.py  test_repositories.py  test_snippets.py  test_tools_smoke.py  test_users.py  test_wikis.py
tests/unit/test_utils/: __init__.py  test_logging.py
